Project1/src/objects/Department__c.object
<CustomObject>
    <description>Department</description>
    <fields>
        <fullName>Decription__c</fullName>
        <label>Decription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Department_name__c</fullName>
        <label>Department name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <label>Department</label>
    <listViews>
        <fullName>Department</fullName>
        <columns>Department_name__c</columns>
        <filterScope>Everything</filterScope>
        <label>Department</label>
    </listViews>
    <nameField>
        <displayFormat>DPT-{000000}</displayFormat>
        <label>Department Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>